# Ruina

./: .gitignore  CMakeLists.txt  README.md  Ruina.sln  imgui.ini
Ruina/: Ruina.vcxproj  Ruina.vcxproj.filters
Ruina/res/meshes/: cube.stl  triangle.stl
Ruina/res/shaders/: BatchFragment.shader  BatchVertex.shader  Fragment.shader  Vertex.shader
Ruina/src/: Debugger.cpp  Debugger.h  IndexBuffer.cpp  IndexBuffer.h  Main.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
Ruina/src/editor/: Editor.cpp  Editor.h  MovementSystem.cpp  MovementSystem.h  ObjectSelectionSystem.cpp  ObjectSelectionSystem.h  Scene.cpp  Scene.h
Ruina/src/game/: Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  Game.cpp  Game.h
Ruina/src/game/ecs/: Component.cpp  Component.h  ComponentManager.cpp  ComponentManager.h  ECS.h  ECSEngine.h  ECSTypes.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Event.h  Group.h  Manager.cpp  Manager.h  System.cpp  System.h  SystemManager.cpp  SystemManager.h  WindowEventSystem.cpp  WindowEventSystem.h
Ruina/src/game/events/: Event.h  EventManager.cpp  EventManager.h
Ruina/src/game/geometry/: Block.h  MeshComponent.h  MeshComponentFactory.h  MeshLoader.h  VertexPNUV.h
Ruina/src/game/physics/: MassComponent.h  MotionComponent.h  MotionEntity.h  PhysicsSystem.cpp  PhysicsSystem.h  Torque.h
Ruina/src/game/renderer/: Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  RenderSystem.cpp  RenderSystem.h  Texture.cpp  Texture.h  TextureCache.h  TextureManager.cpp  TextureManager.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
Ruina/src/game/terrain/: Block.h  ChunkDrawSystem.h  ChunkEntity.h  ChunkPositionComponent.h  CubeComponent.h  RenderSystem.h
Ruina/src/geometry/: Cube.cpp  Cube.h  MeshComponent.h  MeshComponentFactory.h  TextureData.h  Vertex.h  VertexPNUV.h
Ruina/src/gui/: Gui.h  GuiButton.cpp  GuiCheckbox.cpp  GuiColorPicker.cpp  GuiManager.cpp  GuiManager.h  GuiText.cpp  GuiTripleSlider.cpp  IGuiElement.h
Ruina/src/tests/: Test.cpp  Test.h  TestChunkRender.cpp  TestChunkRender.h  TestClearColor.cpp  TestClearColor.h  TestColorBatchRender.cpp  TestColorBatchRender.h  TestColorCube.cpp  TestColorCube.h  TestColorQuad.cpp  TestColorQuad.h  TestECS.cpp  TestECS.h  TestECSRender.cpp  TestECSRender.h  TestSimpleBatchRender.cpp  TestSimpleBatchRender.h  TestTexture2D.cpp  TestTexture2D.h  TestTextureBatchRender.cpp  TestTextureBatchRender.h
